[package]
name = "chombo-gen-backend"
version = "0.1.0"
edition = "2024"

description = "Web service generating images of Japanese (Riichi) Mahjong hands - backend server"
categories = ["rendering", "web-programming"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
keywords = ["riichi", "mahjong", "renderer"]
readme = "../README.md"
repository = "https://github.com/m4tx/chombo-gen.git"
homepage = "https://github.com/m4tx/chombo-gen"
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10"
chombo-gen-common = { path = "../chombo-gen-common" }
cot = { git = "https://github.com/cot-rs/cot", rev = "3d3ea78b1044d0886dcb73fbbe91591b7d8ff4e1", version = "0.3", features = ["json", "openapi", "swagger-ui"], default-features = false }
image = { version = "0.25.6", default-features = false, features = ["png"] }
indexmap = "2.10.0"
riichi_hand = "0.6.3"
schemars.workspace = true
serde.workspace = true
time = "0.3.41"
tokio = "1.46"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
