[package]
name = "chombo-gen-common"
version = "0.1.0"
edition = "2024"

description = "Web service generating images of Japanese (Riichi) Mahjong hands - common library"
categories = ["rendering", "wasm", "web-programming"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
keywords = ["riichi", "mahjong", "renderer"]
readme = "../README.md"
repository = "https://github.com/m4tx/chombo-gen.git"
homepage = "https://github.com/m4tx/chombo-gen"
license = "AGPL-3.0-only"

[dependencies]
serde.workspace = true
schemars.workspace = true
