[package]
name = "chombo-gen-frontend"
version = "0.1.0"
edition = "2024"

description = "Web service generating images of Japanese (Riichi) Mahjong hands - webapp frontend"
categories = ["rendering", "wasm", "web-programming"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
keywords = ["riichi", "mahjong", "renderer"]
readme = "../README.md"
repository = "https://github.com/m4tx/chombo-gen.git"
homepage = "https://github.com/m4tx/chombo-gen"
license = "AGPL-3.0-only"

[dependencies]
chombo-gen-common = { path = "../chombo-gen-common" }
gloo-net = "0.6.0"
yew = { version = "0.22", features = ["csr"] }
yew-hooks = "0.4"
serde.workspace = true
wasm-bindgen-futures = "0.4.56"
base64 = "0.22.1"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console", "HtmlElement", "HtmlButtonElement", "HtmlSelectElement", "MouseEvent", "DomRect"] }
